--- a/assets/style.css
+++ b/assets/style.css
@@ -71,7 +71,7 @@ hr {
 .project-card {
     color: #212529;
     margin: 0 auto;
-    background-image: linear-gradient(to bottom, #65f865, #e2acd5);
+    background-image: linear-gradient(to bottom, #88d0da, #a5df97);
     max-width: 500px;
     min-height: 500px;
     /* background-color: rgb(211, 125, 211); */
