--- a/assets/style.css
+++ b/assets/style.css
@@ -104,6 +104,7 @@ a:hover {
     background-color: #e7e7e9;
     opacity: 0.8;
     font-family: 'Frank Ruhl Libre', serif;
+    border-radius: 20px;
 }
 
 .modal-content {
