--- a/assets/style.css
+++ b/assets/style.css
@@ -133,6 +133,12 @@ a:hover {
     font-family: 'Frank Ruhl Libre', serif;
 }
 
+#down-arrow-1:hover, #down-arrow-2:hover {
+    background-image: linear-gradient(to bottom, #44464b, #2b2b2e);
+    border-radius: 15px;
+}
+
+
 /*-----------------------------------------------*/
 /* media queries to create responsive font sizing */
 /*-----------------------------------------------*/
