--- a/assets/style.css
+++ b/assets/style.css
@@ -195,3 +195,10 @@ a:hover {
         margin-left: 55px;
     }
 }
+
+@media only screen and (min-width: 769px) and (max-width: 1000px) {
+    #profile-pic {
+        max-height: 250px;
+        transform: rotate(90deg);
+    }
+}
