--- a/assets/style.css
+++ b/assets/style.css
@@ -169,7 +169,10 @@ a:hover {
 
     #profile-pic {
         max-height: 250px;
-        /* transform: rotate(90deg); */
+        -moz-transform:rotate(90deg);
+        -webkit-transform:rotate(90deg);
+        -ms-transform:rotate(90deg);
+        transform: rotate(90deg);
     }
 
     #phone-number {
