--- a/assets/style.css
+++ b/assets/style.css
@@ -89,9 +89,9 @@ a:hover {
 }
 
 #profile-pic {
-    transform: rotate(90deg);
+    /* transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
+    -ms-transform: rotate(90deg); */
     max-height: 450px;
     margin-top: 25px;
     border-style: solid;
@@ -169,10 +169,10 @@ a:hover {
 
     #profile-pic {
         max-height: 250px;
-        -moz-transform: rotate(90deg);
+        /* -moz-transform: rotate(90deg);
         -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
-        transform: rotate(90deg);
+        transform: rotate(90deg); */
     }
 
     #phone-number {
