--- a/assets/style.css
+++ b/assets/style.css
@@ -201,10 +201,9 @@ a:hover {
     }
 }
 
-/* @media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px) {
     #profile-pic {
-        max-height: 250px;
-        transform: rotate(90deg);
-        -webkit-transform: rotate(90deg);
+        border-radius: 50px;
     }
-} */
+}
+
